--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "LinkedIn Simple",
+  "name": "NoFeedLinkedIn",
   "description": "Delete access to feed in LinkedIn",
   "version": "1.0.0",
   "icons": {
